--- a/src/main/resources/Css/settings.css
+++ b/src/main/resources/Css/settings.css
@@ -1,12 +1,8 @@
-.background{
-	-fx-background-color: linear-gradient(to bottom right, #74ebd5, #ACB6E5);
-}
 .background Text{
 	-fx-font-size: 3em;
-	-fx-font-family: Arial;
 }
-.Container{
-	-fx-background-color: #FFFFFF;
-	-fx-background-color-radius: 15;
-	-fx-border-radius:15;
+
+.tab-pane{
+	-fx-background-radius: 10;
+	-fx-border-radius: 10;
 }
