--- a/src/main/resources/Fxml/FAQ.fxml
+++ b/src/main/resources/Fxml/FAQ.fxml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" styleClass="background" stylesheets="@../Css/faq.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" styleClass="background" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Accordion layoutX="14.0" layoutY="85.0" prefHeight="600.0" prefWidth="1040.0" styleClass="Container" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="100.0">
+      <Accordion layoutX="14.0" layoutY="85.0" prefHeight="600.0" prefWidth="1040.0" stylesheets="@../Css/faq.css" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="100.0">
         <panes>
-          <TitledPane animated="false" text="How to register?">
+          <TitledPane animated="false" styleClass="Container" text="How to register?">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
             </content>
@@ -78,7 +78,11 @@
             </TitledPane>
         </panes>
       </Accordion>
-      <Text layoutX="314.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Frequently Asked Questions" AnchorPane.leftAnchor="315.0" AnchorPane.topAnchor="20.0" />
-      <Line endX="800.0" layoutX="140.0" layoutY="80.0" scaleY="3.0" AnchorPane.leftAnchor="140.0" AnchorPane.rightAnchor="140.0" AnchorPane.topAnchor="80.0" />
+      <Text layoutX="314.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title" text="Frequently Asked Questions" AnchorPane.leftAnchor="315.0" AnchorPane.topAnchor="20.0" />
+      <Line endX="800.0" layoutX="140.0" layoutY="80.0" scaleY="3.0" styleClass="line" AnchorPane.leftAnchor="140.0" AnchorPane.rightAnchor="140.0" AnchorPane.topAnchor="80.0" />
    </children>
+   <stylesheets>
+      <URL value="@../Css/faq.css" />
+      <URL value="@../Css/darkmode.css" />
+   </stylesheets>
 </AnchorPane>
