--- a/src/main/resources/Fxml/Settings.fxml
+++ b/src/main/resources/Fxml/Settings.fxml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane  maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" styleClass="background" stylesheets="@../Css/settings.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ataraxia.IMS.Controllers.SettingsController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" styleClass="root" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ataraxia.IMS.Controllers.SettingsController">
    <children>
-      <TabPane layoutX="62.0" layoutY="40.0" prefHeight="600.0" prefWidth="1000.0" styleClass="Container" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="40.0">
+      <TabPane layoutX="62.0" layoutY="40.0" prefHeight="600.0" prefWidth="1000.0" styleClass="tab-pane" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="40.0">
         <tabs>
           <Tab fx:id="general" text="General">
             <content>
@@ -21,7 +23,12 @@
           </Tab>
             <Tab fx:id="appearance" text="Appearance">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <RadioButton fx:id="lightmode" layoutX="83.0" layoutY="216.0" mnemonicParsing="false" text="Light Mode" />
+                        <Text layoutX="74.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Theme" />
+                        <RadioButton fx:id="darkmode" layoutX="453.0" layoutY="216.0" mnemonicParsing="true" text="Dark Mode" />
+                     </children></AnchorPane>
               </content>
             </Tab>
             <Tab fx:id="notifications" text="Notifications">
@@ -36,6 +43,10 @@
             </Tab>
         </tabs>
       </TabPane>
-      <Text layoutX="475.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Settings" AnchorPane.leftAnchor="475.0" AnchorPane.rightAnchor="475.0" AnchorPane.topAnchor="20.0" />
+      <Text layoutX="475.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title" text="Settings" AnchorPane.leftAnchor="475.0" AnchorPane.rightAnchor="475.0" AnchorPane.topAnchor="20.0" />
    </children>
+   <stylesheets>
+      <URL value="@../Css/settings.css" />
+      <URL value="@../Css/darkmode.css" />
+   </stylesheets>
 </AnchorPane>
