updated code so it actually works

--- a/src/main/resources/Css/darkmode.css
+++ b/src/main/resources/Css/darkmode.css
@@ -104,3 +104,51 @@
 .label{
 	-fx-text-fill: #ffffff;
 }
+.table-view {
+    -fx-background-color: #171717;
+    -fx-table-cell-border-color: transparent;
+}
+
+.table-view .column-header-background {
+    -fx-background-color: #171717;
+}
+
+.table-view .column-header, .table-view .filler {
+    -fx-background-color: transparent;
+    -fx-size: 35;
+    -fx-border-width: 0 0 1 0;
+    -fx-border-color: #3e91ff;
+}
+
+.table-view .column-header .label {
+    -fx-text-fill: #ffffff;
+}
+
+.table-row-cell {
+    -fx-background-color: #171717;
+    -fx-border-color: transparent;
+    -fx-table-cell-border-color: transparent;
+}
+
+.table-row-cell:odd {
+    -fx-background-color: #1e1e1e;
+}
+
+.table-row-cell:selected {
+    -fx-background-color: #3e91ff;
+}
+
+.table-row-cell:selected .text {
+    -fx-fill: #ffffff;
+}
+
+.table-view .table-cell {
+    -fx-text-fill: #ffffff;
+}
+.table-view .table-cell {
+    -fx-alignment: CENTER;
+}
+
+.table-view .column-header .label {
+    -fx-alignment: CENTER;
+}
