--- a/src/main/resources/Css/lightmode.css
+++ b/src/main/resources/Css/lightmode.css
@@ -105,3 +105,47 @@
 .label{
 	-fx-text-fill: #010101;
 }
+.table-view {
+    -fx-background-color: white;
+    -fx-table-cell-border-color: transparent;
+}
+
+.table-view .column-header-background {
+    -fx-background-color: #f0f0f0;
+}
+
+.table-view .column-header, .table-view .filler {
+    -fx-background-color: transparent;
+    -fx-size: 35;
+    -fx-border-width: 0 0 1 0;
+    -fx-border-color: #dddddd;
+}
+
+.table-view .column-header .label {
+    -fx-text-fill: #333333;
+}
+
+.table-row-cell {
+    -fx-background-color: white;
+    -fx-border-color: transparent;
+    -fx-table-cell-border-color: transparent;
+}
+
+.table-row-cell:odd {
+    -fx-background-color: #f9f9f9;
+}
+
+.table-row-cell:selected {
+    -fx-background-color: #0072de;
+}
+
+.table-row-cell:selected .text {
+    -fx-fill: white;
+}
+.table-view .table-cell {
+    -fx-alignment: CENTER;
+}
+
+.table-view .column-header .label {
+    -fx-alignment: CENTER;
+}
