added 1 line of code and removed a lot to fix 1 small ui change

--- a/src/main/resources/Css/darkmode.css
+++ b/src/main/resources/Css/darkmode.css
@@ -153,6 +153,6 @@
     -fx-alignment: CENTER;
 }
 
-.button .fontawesome-icon {
-    -fx-fill: #ffffff;
+.table-view .table-icon{
+	-fx-fill: #ffffff;
 }
