--- a/src/main/resources/Fxml/Details.fxml
+++ b/src/main/resources/Fxml/Details.fxml
@@ -7,41 +7,45 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ataraxia.IMS.Controllers.DetailsControlller">
    <children>
       <AnchorPane layoutX="93.0" layoutY="78.0" prefHeight="630.0" prefWidth="1040.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0">
          <children>
-            <Text layoutX="54.0" layoutY="88.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Institution Name:" />
-            <Text layoutX="54.0" layoutY="115.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Registration Number:" />
-            <Text layoutX="54.0" layoutY="145.0" strokeType="OUTSIDE" strokeWidth="0.0" text="President's Name:" />
-            <Text layoutX="54.0" layoutY="208.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Number of Members:" />
-            <Text layoutX="54.0" layoutY="175.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Phone Number" />
-            <Text layoutX="54.0" layoutY="247.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address:" />
-            <Text layoutX="54.0" layoutY="281.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date of Registration:" />
-            <Text layoutX="54.0" layoutY="320.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date of Expiry:" />
-            <Text layoutX="54.0" layoutY="360.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Verified By:" />
-            <TextField layoutX="191.0" layoutY="71.0" />
-            <TextField layoutX="191.0" layoutY="98.0" />
-            <TextField layoutX="191.0" layoutY="127.0" />
-            <TextField layoutX="191.0" layoutY="158.0" />
-            <TextField layoutX="191.0" layoutY="190.0" />
-            <TextField layoutX="191.0" layoutY="221.0" />
-            <TextField layoutX="191.0" layoutY="255.0" />
-            <TextField layoutX="191.0" layoutY="294.0" />
-            <TextField layoutX="191.0" layoutY="334.0" />
-            <TextArea layoutX="30.0" layoutY="416.0" prefHeight="150.0" prefWidth="1000.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" />
-            <Text layoutX="31.0" layoutY="442.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Notes:" />
+            <Text layoutX="54.0" layoutY="88.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Institution Name:" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="40.0" />
+            <Text layoutX="54.0" layoutY="115.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Registration Number:" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="80.0" />
+            <Text layoutX="54.0" layoutY="145.0" strokeType="OUTSIDE" strokeWidth="0.0" text="President's Name:" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="120.0" />
+            <Text layoutX="54.0" layoutY="208.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Number of Members:" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="200.0" />
+            <Text layoutX="54.0" layoutY="175.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Phone Number:" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="160.0" />
+            <Text layoutX="54.0" layoutY="247.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address:" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="240.0" />
+            <Text layoutX="54.0" layoutY="281.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date of Registration:" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="280.0" />
+            <Text layoutX="54.0" layoutY="320.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date of Expiry:" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="320.0" />
+            <Text layoutX="54.0" layoutY="360.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Verified By:" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="360.0" />
+            <TextField fx:id="institute_name" layoutX="191.0" layoutY="71.0" prefWidth="300.0" AnchorPane.leftAnchor="200.0" AnchorPane.topAnchor="35.0" />
+            <TextField fx:id="reg_no" layoutX="191.0" layoutY="98.0" prefWidth="300.0" AnchorPane.leftAnchor="200.0" AnchorPane.topAnchor="75.0" />
+            <TextArea fx:id="notes" layoutX="30.0" layoutY="416.0" prefHeight="150.0" prefWidth="880.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="80.0" AnchorPane.rightAnchor="80.0" />
+            <Text layoutX="31.0" layoutY="442.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Notes:" AnchorPane.bottomAnchor="190.0" AnchorPane.leftAnchor="80.0" />
+            <TextField fx:id="president_name" layoutX="200.0" layoutY="115.0" prefWidth="300.0" />
+            <TextField fx:id="phone" layoutX="200.0" layoutY="155.0" prefWidth="300.0" />
+            <TextField fx:id="members_count" layoutX="200.0" layoutY="195.0" prefWidth="300.0" />
+            <TextField fx:id="address" layoutX="200.0" layoutY="236.0" prefWidth="300.0" />
+            <TextField fx:id="reg_date" layoutX="200.0" layoutY="275.0" prefWidth="300.0" />
+            <TextField fx:id="exp_date" layoutX="200.0" layoutY="315.0" prefWidth="300.0" />
+            <TextField fx:id="verified_by" layoutX="200.0" layoutY="355.0" prefWidth="300.0" />
          </children>
       </AnchorPane>
-      <Button layoutX="887.0" layoutY="14.0" mnemonicParsing="false" text="Edit">
+      <Button fx:id="edit" layoutX="887.0" layoutY="14.0" mnemonicParsing="false" text="Edit" AnchorPane.rightAnchor="160.0" AnchorPane.topAnchor="20.0">
          <graphic>
             <FontAwesomeIconView glyphName="EDIT" size="18" />
          </graphic>
       </Button>
-      <Button layoutX="787.0" layoutY="14.0" mnemonicParsing="false" text="Download">
+      <Button fx:id="download" layoutX="787.0" layoutY="14.0" mnemonicParsing="false" text="Download" AnchorPane.rightAnchor="240.0" AnchorPane.topAnchor="20.0">
          <graphic>
             <FontAwesomeIconView glyphName="DOWNLOAD" size="18" />
+         </graphic>
+      </Button>
+      <Button fx:id="delete" layoutX="963.0" layoutY="21.0" mnemonicParsing="false" text="Delete" AnchorPane.rightAnchor="80.0" AnchorPane.topAnchor="20.0">
+         <graphic>
+            <FontAwesomeIconView glyphName="TRASH" size="18" />
          </graphic>
       </Button>
    </children>
