--- a/src/main/resources/Css/lightmode.css
+++ b/src/main/resources/Css/lightmode.css
@@ -13,7 +13,14 @@
 }
 
 .title {
-    -fx-font-size: 3em;
+    -fx-font-size: 2.5em;
+    -fx-font-weight: bold;
+    -fx-fill: #010101;
+}
+
+.title2 {
+    -fx-font-size: 2em;
+    -fx-font-weight: bold;
     -fx-fill: #010101;
 }
 
